[project]
name = "process-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "momentum-client",
    "odk-tools",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.1" }
momentum-client = { git = "https://github.com/odense-rpa/momentum-client.git" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git" }
